Also fixed the margin top for when the menu is opened on smaller devices

--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -182,7 +182,7 @@ path:nth-child(6) {
     display: none;
     font-weight: bold;
     font-size: 1.5rem;
-    margin-top: 50px;
+    margin-top: 48px;
     background-color: var(--navbar-bg-colour);
     width: 100%;
     position: absolute;
